--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -7,3 +7,28 @@ input {
 body {
     width: 200px;
 }
+
+input.popup-input {
+    width: 100%;
+    margin-bottom: 0.5rem;
+    padding: 0.5rem;
+    outline: 0;
+    border: 1px solid #ebebeb;
+    border-radius: 6px;
+}
+
+.popup-submit {
+    width: 100%;
+    outline: 0;
+    border: 1px solid #ebebeb;
+    border-radius: 6px;
+    background: #02006c;
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.popup-bottom {
+    text-align: center;
+}
